--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id=clearboard>CLEAR</button>
     </div>
     <div class=wrapper>
-        <div class="container"></div>
+        <div class="container" id="cont"></div>
     </div>
     
     <script src="drawingboard.js"></script>
