Updated color buttons

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <body>
     <h1>Drawing Board🖌</h1>
     <div class="buttons">
-        <button id=clearboard onclick"functionname()">CLEAR</button>
-        <button id="black" onclick"functionname()">CLEAR</button>
-        <button id="yellow" onclick"functionname()">CLEAR</button>
-        <button id="red" onclick"functionname()">CLEAR</button>
-        <button id="blue" onclick="changeColor('blue')">blue</button>
+        <button id=clearboard onclick="changeColor('white')">ERASER</button>
+        <button id="yellow" onclick="changeColor('yellow')">YELLOW</button>
+        <button id="red" onclick="changeColor('red')">RED</button>
+        <button id="blue" onclick="changeColor('blue')">BLUE</button>
+        <button id="green" onclick="changeColor('green')">GREEN</button>
         
-        <button id="green" onclick"functionname()">CLEAR</button>
-        <button id="rainbow" onclick"functionname()">CLEAR</button>
     </div>
     
     <div class="container" id="container"></div>
