added size button; Cleaned code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <h1>Drawing Board🖌</h1>
+    <h1>Drawing Board 🖌</h1>
     <div class="buttons">
+        <button id="size" onclick="changeGridSize()">SIZE</button>
         <button id=clearboard onclick="changeColor('white')">ERASER</button>
         <button id="yellow" onclick="changeColor('yellow')">YELLOW</button>
         <button id="red" onclick="changeColor('red')">RED</button>
